# xormix

./: .gitignore  LICENSE-catch.txt  LICENSE-cxxopts.txt  LICENSE-pcg.txt  LICENSE.txt  README.md
cpp/: CMakeLists.txt
cpp/common/: random.cpp  random.hpp  xormix.cpp  xormix.hpp
cpp/design/: discrete_log.cpp
cpp/pycpp/: avalanche.cpp  python_module.cpp  xormix_avalanche.cpp  xormix_discrete_log.cpp  xormix_pycpp.cpp
cpp/test/: test_divide_period.cpp  test_full_period.cpp  test_matrix_inverse.cpp  test_matrix_power.cpp  test_output.cpp  test_output_wide.cpp  test_reverse.cpp  tests.cpp
cpp/tool/: tool.cpp
doc/: algorithm.md  design-criteria.md  hardware-interface.md  mathematical-properties-xormix128.md  mathematical-properties-xormix16.md  mathematical-properties-xormix24.md  mathematical-properties-xormix32.md  mathematical-properties-xormix48.md  mathematical-properties-xormix64.md  mathematical-properties-xormix96.md  mathematical-properties.md  python-bindings-cpp.md  randomness-test-results.md
doc/wavedrom/: timing-diagram.txt
python/: README.md
python/analysis/: discrete_log.py  discrete_log_test.py  generate_matrix.py  lfsr_mapping.py  polynomial.py  randogram.py
python/codegen/: generate_cpp.py  generate_verilog.py  generate_vhdl.py  generate_vhdl_x7s.py  testvec_divide_period.py  testvec_matrix_power.py  testvec_output.py  testvec_output_wide.py
python/design/: avalanche.py  avalanche_test.py  dump_properties.py  extract_lfsr.py  extract_phases.py  generate_matrix.py  generate_shuffle.py  randogram.py
python/reference/: xormix.py  xormix128.py  xormix16.py  xormix24.py  xormix32.py  xormix48.py  xormix64.py  xormix96.py  xormix_all.py  xormix_ref.py
verilog/: run.sh
verilog/rtl/: xormix128.v  xormix16.v  xormix24.v  xormix32.v  xormix48.v  xormix64.v  xormix96.v
verilog/tb/: xormix128_tb.v  xormix16_tb.v  xormix24_tb.v  xormix32_tb.v  xormix48_tb.v  xormix64_tb.v  xormix96_tb.v
vhdl/: run.sh
vhdl/rtl/: xormix128.vhd  xormix16.vhd  xormix24.vhd  xormix32.vhd  xormix48.vhd  xormix64.vhd  xormix96.vhd
vhdl/tb/: xormix128_tb.vhd  xormix16_tb.vhd  xormix24_tb.vhd  xormix32_tb.vhd  xormix48_tb.vhd  xormix64_tb.vhd  xormix96_tb.vhd
vhdl_x7s/: run.sh
vhdl_x7s/rtl/: unisim_stubs.vhd  xormix128_x7s.vhd  xormix16_x7s.vhd  xormix24_x7s.vhd  xormix32_x7s.vhd  xormix48_x7s.vhd  xormix64_x7s.vhd  xormix96_x7s.vhd
vhdl_x7s/tb/: xormix128_tb.vhd  xormix16_tb.vhd  xormix24_tb.vhd  xormix32_tb.vhd  xormix48_tb.vhd  xormix64_tb.vhd  xormix96_tb.vhd
